# gg.engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: linux.yml  windows.yml
data/config/: engine.cfg
src/engine/: CMakeLists.txt
src/engine/include/gg/core/: macros.h
src/engine/include/gg/core/container/array/: array_dynamic.h  array_static.h
src/engine/include/gg/core/container/iterator/: contiguous_iterator.h  iterator_defs.h  iterator_desc.h
src/engine/include/gg/core/container/map/: hash_map.h  map.h
src/engine/include/gg/core/endian/: endian.h  endian_defs.h  endian_desc.h
src/engine/include/gg/core/hash/: hash.h
src/engine/include/gg/core/memory/: memory_buffer_static.h  memory_defs.h  memory_desc.h
src/engine/include/gg/core/stream/: istream.h  stream_defs.h
src/engine/include/gg/core/string/: macros.h
src/engine/include/gg/core/string/macro/: macro.h
src/engine/include/gg/core/string/type/: string.h  string_ref.h
src/engine/include/gg/core/thread/: thread_pool.h
src/engine/include/gg/core/type/: number.h  type_trait.h
src/engine/include/gg/engine/config/: config_log.h  config_module.h
src/engine/include/gg/engine/debug/: debug_module.h
src/engine/include/gg/engine/game/: game_state.h  game_state_defs.h  game_state_manager.h
src/engine/include/gg/engine/gfx/: gfx_module.h  gfx_vulkan.h
src/engine/include/gg/engine/gfx/opengl/: gfx_module.h  gfx_opengl_module.h
src/engine/include/gg/engine/gfx/vulkan/: gfx_module.h  gfx_vulkan_module.h
src/engine/include/gg/engine/gui/: gui_module.h
src/engine/include/gg/engine/pattern/module/: module.h
src/engine/include/gg/engine/pattern/module_locator/: module_locator.h
src/engine/include/gg/engine/pattern/plugin/: plugin.h
src/engine/include/gg/engine/runtime/: runtime.h  runtime_base.h  runtime_log.h  runtime_platform.h
src/engine/include/gg/engine/runtime/pc/: runtime_pc.h
src/engine/src/gg/core/thread/: thread_pool.cpp
src/engine/src/gg/engine/config/: config_module.cpp
src/engine/src/gg/engine/debug/: debug_module.cpp
src/engine/src/gg/engine/game/: game_state.cpp  game_state_manager.cpp
src/engine/src/gg/engine/gfx/: gfx_module.cpp  gfx_vulkan.cpp
src/engine/src/gg/engine/gfx/opengl/: gfx_module.cpp  gfx_opengl_module.cpp
src/engine/src/gg/engine/gfx/vulkan/: gfx_module.cpp  gfx_vulkan_module.cpp
src/engine/src/gg/engine/gui/: gui_module.cpp
src/engine/src/gg/engine/runtime/: runtime.cpp  runtime_base.cpp  runtime_bin.cxx
src/engine/src/gg/engine/runtime/pc/: runtime_pc.cpp
src/engine/test/gg/: version_test.cpp
src/engine/test/gg/core/container/array/: array_dynamic_test.cpp
src/engine/test/gg/core/container/iterator/: contiguous_iterator_test.cpp  iterator_test.cpp
src/engine/test/gg/core/container/map/: hash_map_test.cpp  map_test.cpp
src/engine/test/gg/core/endian/: endian_test.cpp
src/engine/test/gg/core/hash/: hash_test.cpp
src/engine/test/gg/core/memory/: memory_test.cpp
src/engine/test/gg/core/pattern/: identifiable_test.cpp
src/engine/test/gg/core/string/type/: string_dynamic_test.cpp  string_ref_test.cpp  string_static_test.cpp
src/engine/test/gg/core/type/: enum_test.cpp  number_test.cpp
src/engine/test/gg/engine/game/: game_state_test.cpp
src/engine/test/gg/engine/pattern/module_locator/: module_locator_test.cpp
src/engine/test/gg/engine/runtime/: runtime_test.cpp
src/test/: CMakeLists.txt
tools/vscode/: cmake-variants.json  launch.json  settings.json
